--- a/index.html
+++ b/index.html
@@ -6,12 +6,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS todo list project</title>
 
+    <!-- tailwind and daisyUI link -->
+
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@2.50.1/dist/full.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+
     <!-- font awesome link -->
 
     <script src="https://kit.fontawesome.com/70a98cd510.js" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+<body class="lg:mx-auto bg-purple-500 lg:w-[80%] rounded-xl p-10 mt-10">
+
+    <div class="mt-5 mb-5">
+        <input type="text" placeholder="search here" class="input input-bordered input-success w-full text-white bg-purple-900"/>
+    </div>
+    <div>
+        <ul class="text-white">
+            <div class="flex justify-between items-center border-2 p-3 mb-4 rounded-xl lg:w-[75%] mx-auto">
+                <div>
+                    <li > 1 . Home work done</li>
+                </div>
+
+                <div>
+                    <i class="fa-solid fa-trash block cursor-pointer"></i>
+                </div>
+            </div>
+
+            <div class="flex justify-between items-center border-2 p-3 mb-4 rounded-xl lg:w-[75%] mx-auto">
+                <div>
+                    <li > 2 . Today sports done</li>
+                </div>
+
+                <div>
+                    <i class="fa-solid fa-trash block cursor-pointer"></i>
+                </div>
+            </div>
+
+            <div class="flex justify-between items-center border-2 p-3 mb-4 rounded-xl lg:w-[75%] mx-auto">
+                <div>
+                    <li > 3 . Extra curiculam activites done</li>
+                </div>
+
+                <div>
+                    <i class="fa-solid fa-trash block cursor-pointer"></i>
+                </div>
+            </div>
+        </ul>
+    </div>
+    <div class="mt-5">
+        <h2 class="mb-4 text-center text-white">Add a new todo......</h2>
+        <input type="text" placeholder="Add new todo here" class="input input-bordered bg-purple-900 w-full text-white" />
+    </div>
 
     <script src="app.js"></script>
 </body>
