header title added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 </head>
 <body class="lg:mx-auto bg-purple-500 lg:w-[80%] rounded-xl p-10 mt-10">
 
+    <h2 class="text-white text-6xl font-extrabold text-center mb-4">Todo List</h2>
+
     <div class="mt-5 mb-5">
         <input type="text" placeholder="search here" class="input input-bordered input-success w-full text-white bg-purple-900"/>
     </div>
@@ -26,7 +28,7 @@
         <ul class="text-white">
             <div class="flex justify-between items-center border-2 p-3 mb-4 rounded-xl lg:w-[75%] mx-auto">
                 <div>
-                    <li > 1 . Home work done</li>
+                    <li class="text-xl"> 1 . Home work done</li>
                 </div>
 
                 <div>
@@ -36,7 +38,7 @@
 
             <div class="flex justify-between items-center border-2 p-3 mb-4 rounded-xl lg:w-[75%] mx-auto">
                 <div>
-                    <li > 2 . Today sports done</li>
+                    <li class="text-xl"> 2 . Today sports done</li>
                 </div>
 
                 <div>
@@ -46,7 +48,7 @@
 
             <div class="flex justify-between items-center border-2 p-3 mb-4 rounded-xl lg:w-[75%] mx-auto">
                 <div>
-                    <li > 3 . Extra curiculam activites done</li>
+                    <li class="text-xl"> 3 . Extra curiculam activites done</li>
                 </div>
 
                 <div>
@@ -56,7 +58,7 @@
         </ul>
     </div>
     <div class="mt-5">
-        <h2 class="mb-4 text-center text-white">Add a new todo......</h2>
+        <h2 class="mb-4 text-center text-white text-3xl font-normal">Add a new todo......</h2>
         <input type="text" placeholder="Add new todo here" class="input input-bordered bg-purple-900 w-full text-white" />
     </div>
 
