--- a/index.html
+++ b/index.html
@@ -22,39 +22,39 @@
     <div class="mt-5 mb-5">
         <input type="text" placeholder="search here" class="input input-bordered input-success w-full text-white bg-purple-900"/>
     </div>
-    <div>
-        <ul id="list" class="text-white">
-            <div class="flex justify-between items-center border-2 p-3 mb-4 rounded-xl lg:w-[75%] mx-auto">
-                <div>
-                    <li class="text-xl"> 1 . Home work done</li>
-                </div>
 
-                <div>
-                    <i class="fa-solid fa-trash block cursor-pointer"></i>
-                </div>
+        <ul id="list" class="text-white list-none">
+
+            <div>
+
+                <li class="text-xl flex justify-between items-center border-2 p-3 mb-4 rounded-xl lg:w-[75%] mx-auto"> 
+                <span class="block">1 . Home work done</span>
+                <i class="fa-solid fa-trash block cursor-pointer"></i>
+                </li>
+
             </div>
 
-            <div class="flex justify-between items-center border-2 p-3 mb-4 rounded-xl lg:w-[75%] mx-auto">
-                <div>
-                    <li class="text-xl"> 2 . Today sports done</li>
-                </div>
+            <div>
 
-                <div>
-                    <i class="fa-solid fa-trash block cursor-pointer"></i>
-                </div>
+                <li class="text-xl flex justify-between items-center border-2 p-3 mb-4 rounded-xl lg:w-[75%] mx-auto"> 
+                <span class="block">2 . Today sports done</span>
+                <i class="fa-solid fa-trash block cursor-pointer"></i>
+                </li>
+
             </div>
+            
+            <div>
 
-            <div class="flex justify-between items-center border-2 p-3 mb-4 rounded-xl lg:w-[75%] mx-auto">
-                <div>
-                    <li class="text-xl"> 3 . Extra curiculam activites done</li>
-                </div>
+                <li class="text-xl flex justify-between items-center border-2 p-3 mb-4 rounded-xl lg:w-[75%] mx-auto"> 
+                <span class="block">3 . Extra curiculam activites done</span>
+                <i class="fa-solid fa-trash block cursor-pointer"></i>
+                </li>
 
-                <div>
-                    <i class="fa-solid fa-trash block cursor-pointer"></i>
-                </div>
             </div>
+            
         </ul>
-    </div>
+
+
 
     <form id="add-form" class="mt-5">
 
