--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 
         <!-- header text -->
 
-        <h2 class="text-white text-6xl font-extrabold text-center mb-4">Todo List</h2>
+        <h2 class="text-white text-4xl font-extrabold text-center mb-4 underline">Todo List</h2>
 
     </header>
 
     <main>   
         <!-- search form  -->
 
-    <form class="mt-5 mb-5">
+    <form id="search" class="mt-5 mb-5">
 
-        <input type="text" placeholder="search here" class="input input-bordered input-success w-full text-white bg-purple-900"/>
+        <input id="searchHere" type="text" placeholder="search here" class="input input-bordered input-success w-full text-white bg-purple-900"/>
 
     </form>
 
